--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~35.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "expo": "^35.0.0",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-web": "~0.11.7",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^3.0.7",
+    "react-navigation-tabs": "^2.8.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "udacifitness-calendar": "^11.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "babel-preset-expo": "^7.0.0"
   },
   "private": true
 }
