--- a/app.json
+++ b/app.json
@@ -1,30 +1,37 @@
 {
-  "expo": {
-    "name": "Blank Template",
-    "slug": "UdaciFitness",
-    "privacy": "public",
-    "sdkVersion": "35.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
+    "expo": {
+        "name": "UdacityFitness - teste",
+        "description": "The best triathlon tracker ever",
+        "slug": "udaciFitness",
+        "privacy": "public",
+        "sdkVersion": "31.0.0",
+        "platforms": [
+            "ios",
+            "android"
+        ],
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "https://maxcdn.icons8.com/Color/PNG/512/Sports/triathlon-512.png",
+        "notification": {
+            "icon": "https://maxcdn.icons8.com/Color/PNG/512/Sports/triathlon-45.png",
+        },
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0
+        },
+        "assetBundlePatterns": [
+            "**/*"
+        ],
+        "ios": {
+            "supportsTablet": true,
+            "bundleIdentifier": "org.udacifitness.exp",
+        },
+        "android": {
+            "package": "org.udacifitness.exp",
+        }
     }
-  }
 }
